--- a/src/.gitignore
+++ b/src/.gitignore
@@ -1,6 +1,5 @@
 /node_modules
 /public/hot
-/storage/*.key
 /vendor
 .env
 .env.backup
@@ -13,3 +12,7 @@ yarn-error.log
 /.idea
 /.vscode
 /docker/mysql/data/
+/storage/*
+!/storage/app
+!/storage/app/public
+!/storage/app/public/images
